# plenjos-file-manager

./: com.plenjos.Files.json  meson.build
data/: com.plenjos.Files.appdata.xml.in  com.plenjos.Files.desktop.in  com.plenjos.Files.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: files-window.c  files-window.h  files-window.ui  files-window.ui~  files.gresource.xml  main.c  meson.build  theme.css
